# singal

./: .gitignore  README.rst  pyproject.toml
src/fswatch_rsync_send/: __init__.py
src/singal/: __init__.py
