[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "singal"
version = "0.0.2"
description = "Keep a remote directory up-to-date with local changes"
readme = "README.rst"
requires-python = ">=3.8"
license = { file="LICENSE.txt" }
authors = [
    { name="Sam Birch", email="sam@porcupine.club" },
]
dependencies = [
    "ordered-set-37",
    "readline0",
]

[project.scripts]
singal = "singal:main"
